# plaintext-social

./: .gitignore  Cargo.toml  Dockerfile  dev.sh  docker-compose.yml  reset_db.sh  start.sh
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs  main.rs
scripts/: reset_db.sh  run.sh
src/: db.rs  main.rs  routes.rs
src/entities/: mod.rs  post.rs  user.rs
static/: reset.css  scripts.js  styles.css
templates/: base.html  feed.html  index.html  post.html  user.html
