[package]
name = "plaintext-social"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }

actix-files = "0.6.6"
actix-web = "4.11.0"
chrono = "0.4.41"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
tera = "1"
sea-orm = { version = "1.1.0", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
] }
futures = "0.3.31"
dotenvy = "0.15.7"
actix-rt = "2.10.0"
